--- a/style.css
+++ b/style.css
@@ -68,3 +68,38 @@ body {
 .cart-link:hover{
  background-color: #2563eb;
 }
+
+.hero{
+    background: linear-gradient(135deg, #f54dc3, #e41fa9);
+    color: white;
+    text-align: center;
+    padding: 15px 20px 20px;
+    margin-top: 80px;
+}
+
+.hero h1 {
+    font-size: 40px;
+    margin-bottom: 2px;
+    font-weight: bold;
+}
+    
+.hero p {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.btn {
+    display: inline-block;
+    background-color: white;
+    color: #f63bbe;
+    padding: 8px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #f8fafc;
+    transform: translateY(-2px);
+}
