Lesson 5 - Feature Products.css

--- a/style.css
+++ b/style.css
@@ -103,3 +103,93 @@ body {
     background-color: #f8fafc;
     transform: translateY(-2px);
 }
+
+.featured {
+    padding: 80px 0;
+    background-color: #f8fafc;
+}
+
+.featured h2{
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 50px;
+    color: #1e293b;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+}
+
+.product-card {
+    background: white;
+    border: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+
+.product-card:hover{
+    transform: translateY(-5px);
+}
+
+.product-image {
+    width: 100%;
+    height: 200pz;
+    object-fit: cover;
+    background-color: #e2e8f0;
+}
+
+.product-info {
+    padding: 20px;
+}
+
+.product-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #1e293b;
+}
+
+.product-discription {
+    color: #64748b;
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+
+.product-price {
+    font-size: 20px;
+    font-weight: bold;
+    color: #f63bbe;
+    margin-bottom: 15px;
+}
+
+.product-actions {
+    display: flex;
+    gap: 10px;
+}
+
+.btn-small {
+    padding: 8px 16px;
+    font-size: 14px;
+    flex: 1;
+}
+
+.btn-primary {
+    background-color: #3b82f6;
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: #2563eb;
+}
+
+.btn-secondary {
+    background-color: #e2e8f0;
+    color: #334155;
+}
+
+.btn-secondary:hover {
+    background-color: #cbd5e1;
+}
